FindBugs: Make statics final